--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,28292],[[4,5,6,0,[],[1,6,28283],[],[[7,0,0,[8],[1,6179,566,9],[]],[10,0,0,[8],[1,8142,1310,11],[]],[12,0,0,[8],[1,9468,942],[]],[13,0,0,[14,8],[1,10424,1103],[]],[15,0,0,[8],[1,11542,2034],[]],[16,0,0,[14,8],[1,14941,1884,11],[]],[17,0,0,[14,8],[1,19591,1781,18],[]],[19,0,0,[14,8],[1,21389,555],[]],[20,0,0,[14,8],[1,23363,2557,11],[]],[21,0,0,[14,8],[1,27269,959,11],[]],[22,0,0,[14],[1,28244,43],[]]],[],[11,11,0,0]]],[],[],[11,11,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,8580],[[4,5,6,0,[],[1,7,8569],[],[[7,0,0,[8],[1,5427,860,9],[]],[10,0,0,[8],[1,6301,1253],[]],[11,0,0,[8],[1,7572,992],[]]],[],[3,3,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*E2E-Tests","*C:\\Users\\miska\\Desktop\\swt-todo-list-app-main\\Software-Testing-Project-for-Course-TEKS5466\\e2e-tests","*e2e-tests","*Test","*C:\\Users\\miska\\Desktop\\swt-todo-list-app-main\\Software-Testing-Project-for-Course-TEKS5466\\e2e-tests\\test.robot","*e2e-tests/test.robot","*Registering Should Be Possible","*test:retry(10)","*[RETRY] PASS on 4. retry.","*Valid Logout And Login","*[RETRY] PASS on 1. retry.","*Create and delete Todos","*Modify todo list","*smoke","*Create Items And Delete Items","*Create Items And Modify Items","*Create Items And Mark Them As Completed","*[RETRY] PASS on 2. retry.","*Register Another User","*Sharing Todo Lists To Another User","*Get Shared Todolist","*Erasing"]);
+window.output["strings"] = window.output["strings"].concat(["*","*E2E-Tests","*C:\\Users\\miska\\Desktop\\swt-todo-list-app-main\\Software-Testing-Project-for-Course-TEKS5466\\e2e-tests","*e2e-tests","*Test","*C:\\Users\\miska\\Desktop\\swt-todo-list-app-main\\Software-Testing-Project-for-Course-TEKS5466\\e2e-tests\\test.robot","*e2e-tests/test.robot","*Registering Should Be Possible","*test:retry(10)","*[RETRY] PASS on 2. retry.","*Valid Logout And Login","*Create and delete Todos"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":11,"skip":0}],[{"elapsed":"00:00:09","fail":0,"label":"smoke","pass":7,"skip":0},{"elapsed":"00:00:14","fail":0,"label":"test:retry(10)","pass":10,"skip":0}],[{"elapsed":"00:00:28","fail":0,"id":"s1","label":"E2E-Tests","name":"E2E-Tests","pass":11,"skip":0},{"elapsed":"00:00:28","fail":0,"id":"s1-s1","label":"E2E-Tests.Test","name":"Test","pass":11,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:03","fail":0,"label":"test:retry(10)","pass":3,"skip":0}],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"E2E-Tests","name":"E2E-Tests","pass":3,"skip":0},{"elapsed":"00:00:09","fail":0,"id":"s1-s1","label":"E2E-Tests.Test","name":"Test","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1759571828144;
+window.output["baseMillis"] = 1759575311687;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 28321;
+window.output["generated"] = 8590;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
